tests/src/frontend/typechecking/invalid/type_const_default3.sk
base class Foo {
  type T: Test.MixedInt default Test.MixedScalar;
}
